* (bug 20112) Bitrotted tests in the t/ directory were failing.
* (bug 21470) MediaWiki:Sp-contributions-explain is now wrapped in a <p> with
  id "mw-sp-contributions-explain"
* (bug 19159) Fixed \overleftrightarrow in texvc
* (bug 19391) Fix caching for Recent ChangesFeed.
* (bug 21455) Fixed "Watch this page" checkbox appearing on some special pages
  even to non-logged in users
* (bug 21551) Make Squid reponse limit configurable
* Fixed corruption of long UDP debug log messages by using socket_sendto()
  instead of fsockopen() with fwrite().
* (bug 16884) Fixed feed links in sidebar not complying with URL parameters
  of the displayed page
* (bug 21403) memcached class renamed to MWMemecached to avoid conflict with
  PHP's memcached extension
* (bug 21650) Both calls to SkinTemplateTabs hook are now compatible
* (bug 21672) Add missing Accept-Language to both Vary and XVO headers
* (bug 21679) "Edit block reasons" link at the bottom of Special:Blockip is now
  only displayed to the users that have "editinterface" right
* (bug 21740) Attempting to protect a page that doesn't exist (salting) returns
  "unknown error"
* (bug 18762) both redirects and links get fixed one after another if
  redirects-only switch is not present
* (bug 20159) thumbnails rerendered if older that $wgThumbnailEpoch
* Fixed a bug which in some situations causes the job queue to grow forever,
  due to an infinite loop of job requeues.
* (bug 21523) File that can have multiple pages (djvu, pdf, ...) no longer have
  the page selector when they have only one page
* (bug 21559) "logempty" message is now wrapped in a div with class
  "mw-warning-logempty" when used in log extract
* (bug 20549) Parser tests were broken on SQLite backend
* (bug 21776) Interwiki urls like http://en.wikibooks.org/wiki/cs: should give
  a redirect instead of a baderror.
* (bug 21803) Special:MyContributions now keeps the query string parameters