@@ -112,7 +112,6 @@ following names for their contribution to the product.
 * René Kijewski
 * Robert Treat
 * RockMFR
-* Roi Avinoam
 * ST47
 * Scott Colcord
 * Simon Walker
