@@ -214,6 +214,8 @@ $wgAutoloadLocalClasses = array(
 	'SpecialRedirectToSpecial' => 'includes/SpecialPage.php',
 	'SqlBagOStuff' => 'includes/BagOStuff.php',
 	'SquidUpdate' => 'includes/SquidUpdate.php',
+	'SquidPurgeClient' => 'includes/SquidPurgeClient.php',
+	'SquidPurgeClientPool' => 'includes/SquidPurgeClient.php',
 	'Status' => 'includes/Status.php',
 	'StubContLang' => 'includes/StubObject.php',
 	'StubUser' => 'includes/StubObject.php',
